Routes & map added

--- a/index.html
+++ b/index.html
@@ -2,18 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  
+
   <title>LeuvenLeestHier</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Suez+One" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.3.2/css/simple-line-icons.css">
   <script src="https://use.fontawesome.com/415c4aae00.js"></script>
   <link rel="stylesheet" href="/build/css/style.css">
   <link rel="shortcut icon" href="http://facebook.github.io/react/favicon.ico">
+
+  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+  <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+
+  <link rel="stylesheet" href="/scripts/leaftlet-geocoder/Control.Geocoder.css" />
+  <script src="/scripts/leaftlet-geocoder/Control.Geocoder.js"></script>
+
+  <script src="/scripts/jquery-3.0.0.min.js"></script>
+
 </head>
 <body>
-      
-    <div id="main">
-      <!-- This is where our React app will go -->
+
+  <div id="main">
+    <!-- This is where our React app will go -->
+    <div id='myMap'> 
+
     </div>
+  </div>
 
   <script src="/build/main.js"></script>
 
