Add proper viewport tags

--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  
+
+  <!-- Mobile settings http://t.co/dKP3o1e -->
+  <meta name="HandheldFriendly" content="True">
+  <meta name="MobileOptimized" content="320">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
   <title>LeuvenLeestHier</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Suez+One" rel="stylesheet">
@@ -24,7 +29,7 @@
 
   <div id="main">
     <!-- This is where our React app will go -->
-    <div id='myMap'> 
+    <div id='myMap'>
 
     </div>
   </div>
