--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <link rel="stylesheet" href="/scripts/leaftlet-geocoder/Control.Geocoder.css" />
   <script src="/scripts/leaftlet-geocoder/Control.Geocoder.js"></script>
 
+  <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+
 </head>
 <body>
 
