Basic HTML & css

--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
+<!DOCTYPE html>
 <html>
-<head>
-    <title>LeuvenLeest</title>
-</head>
-<body>
-    <h5>Hallo wereld</h5>
-</body>
+    <head lang="nl">
+        <meta charset="utf-8" >
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>LeuvenLeest</title>
+        <meta name="description" content="Vind je babysit bij Kleinpas">
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.3.2/css/simple-line-icons.css">
+        <link href="https://fonts.googleapis.com/css?family=Karla|Montserrat" rel="stylesheet">
+        <link rel="stylesheet" href="assets/css/style.css">
+    </head>
+    <body>
+    	<p>Hallo wereld</p>
+    </body>
 </html>
