--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Suez+One" rel="stylesheet">
   		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.3.2/css/simple-line-icons.css">
   		<script src="https://use.fontawesome.com/415c4aae00.js"></script>
-        <link rel="stylesheet" href="/assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
     	<p>Hallo wereld test ?</p>
