start on the header

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
-    	<p>Hallo wereld test ?</p>
+    	<header>
+    		<div class="black-overlay"></div>
+    		<h1>LeuvenLeest Webapp</h1>
+    	</header>
     </body>
 </html>
