--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </head>
     <body>
     	<header>
+    		<div class="benches"><img src="assets/img/benches.jpeg"></div>
     		<div class="black-overlay"></div>
     		<h1>LeuvenLeest Webapp</h1>
     	</header>
