--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     	<header>
     		<div class="benches"><img src="assets/img/benches.jpeg"></div>
     		<div class="black-overlay"></div>
-    		<h1>LeuvenLeest Webapp</h1>
+    		<h1>LeuvenLeest WebApp</h1>
     	</header>
     </body>
 </html>
