--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="/build/css/style.css">
 
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
-  <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="/build/jquery.min.js"></script>
 
 </head>
 <body>
