--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
+    	<img class="benches" src="assets/img/benches.png">
     	<header>
     		<h1>LeuvenLeest WebApp</h1>
     	</header>
