--- a/index.html
+++ b/index.html
@@ -15,6 +15,37 @@
     	<img class="benches" src="assets/img/benches.png">
     	<header>
     		<h1>LeuvenLeest WebApp</h1>
+    		<h2>A project by #oSoc16 and CultuurConnect</h2>
     	</header>
+    	<section>
+    		<p>
+    			LeuvenLeest is an app focused on finding and sharing cool reading places with 3 distincts dimensions to it:
+    		</p>
+    		<div class="dimensions">
+    			<div class="dim">
+    				<h3>Where?</h3>
+    				<p>
+    					First of all, it helps you discover cool reading spots and filter them to your likings. Maybe you'd like a quiet outside place, or somewhere with chill music and good coffee? LeuvenLeest will help you find your perfect spot<br>
+    					If you find a place you like, you can check-in that location, or add it to your favourite spots, and it will be easier for you to find it again later.<br>
+    					And if you find a place that's not listed in LeuvenLeest, you can even add it to the app!
+    				</p>
+    			</div>
+    			<div class="dim">
+    				<h3>Who?</h3>
+    				<p>
+    					You also have the possibillity to add people to your friends, so you can easily join them for nice reading sessions together.<br>
+    					Maybe you have a friend who always finds the best spots around Leuven and you'd be interested in finding some of those ?
+    				</p>
+    			</div>
+    			<div class="dim">
+    				<h3>What?</h3>
+    				<p>
+    					You can also let people know what kind of books you are reading.<br>
+    					Who knows, you might find out that there's a lot of people interested in the same books as you in your neighborhood and you'll be able to set up a local book club ?<br>
+    					Letting you search by specific book genre will help you surround yourself with people that share your interests.
+    				</p>
+    			</div>
+    		</div>
+    	</section>
     </body>
 </html>
