--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     		<h2>A project by #oSoc16 and CultuurConnect</h2>
     	</header>
     	<section>
+    		<h2>What is LeuvenLeest?</h2>
     		<p>
     			LeuvenLeest is an app focused on finding and sharing cool reading places with 3 distincts dimensions to it:
     		</p>
@@ -46,6 +47,30 @@
     				</p>
     			</div>
     		</div>
+    		<p>
+    			LeuvenLeest is a great tool to bring together people that share a love for reading!
+    		</p>
+    	</section>
+    	<section>
+    		<h2>What is oSoc?</h2>
+    		<p>
+    			<a href="http://summerofcode.be">Open Summer of code</a>, or #oSoc, is a 4 week programme in different Belgian cities during the summer and is part of <a href="http://www.openknowledge.be">Open Knowledge Belgium</a>.<br>
+				The goal: provide Belgian based students the training, network and support necessary to transform open innovation projects into powerful real-world services.
+    		</p>
+    	</section>
+    	<section>
+    		<h2>What is CultuurConnect?</h2>
+    		<p>
+    			<a href="http://www.cultuurconnect.be">Cultuurconnect</a> is a labo where libraries, cultural and community centres try to find solutions for digital challenges in the local cultural strategy.
+    		</p>
+    	</section>
+    	<section>
+    		<h2>Contact</h2>
+    		<p class="center-p">
+    			<a href="https://twitter.com/hashtag/osoc16"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+    			<a href="https://www.facebook.com/openSummerofcode"><i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i></a>
+    			<a href="http://open.summerofcode.be"><i class="fa fa-wordpress fa-3x" aria-hidden="true"></i></a>
+    		</p>
     	</section>
     </body>
 </html>
