--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" >
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>LeuvenLeest</title>
-        <meta name="description" content="Vind je babysit bij Kleinpas">
+        <meta name="description" content="Reading spots at the tip of your finger">
 
  		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Suez+One" rel="stylesheet">
   		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.3.2/css/simple-line-icons.css">
