Added team members

--- a/index.html
+++ b/index.html
@@ -64,6 +64,93 @@
     			<a href="http://www.cultuurconnect.be">Cultuurconnect</a> is a labo where libraries, cultural and community centres try to find solutions for digital challenges in the local cultural strategy.
     		</p>
     	</section>
+    	<section id="team">
+			<h2>Team LeuvenLeest at #oSoc16</h2>
+			<div class="subteams">
+				<div class="subt" id="design">
+					<i class="fa fa-paint-brush fa-3x" aria-hidden="true"></i>
+					<div class="members">
+						<div class="member">
+							<h3>Niels Dewelde</h3>
+							<p>
+								<a href="https://twitter.com/NielsDewelde"><i class="fa fa-twitter fa-2x"></i></a>
+								<a href="https://www.linkedin.com/in/nielsdewelde"><i class="fa fa-linkedin fa-2x"></i></a>
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="subt" id="comm">
+					<i class="fa fa-comments fa-3x" aria-hidden="true"></i>
+					<div class="members">
+						<div class="member">
+							<h3>Eveline Vlassenroot</h3>
+							<p>
+								<a href="https://twitter.com/EvelineVlas"><i class="fa fa-twitter fa-2x"></i></a>
+								<a href="https://www.linkedin.com/in/eveline-vlassenroot-516116a6"><i class="fa fa-linkedin fa-2x"></i></a>
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="subt" id="pics">
+					<i class="fa fa-camera fa-3x" aria-hidden="true"></i>
+					<div class="members">
+						<div class="member">
+							<h3>Bruce Vansteenwinkel</h3>
+							<p>
+								<a href="https://twitter.com/bruce_vid"><i class="fa fa-twitter fa-2x"></i></a>
+								<a href="https://www.linkedin.com/in/bruce-vansteenwinkel-51ba0b61"><i class="fa fa-linkedin fa-2x"></i></a>
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="subt" id="coders">
+					<i class="fa fa-code fa-3x" aria-hidden="true"></i>
+					<div class="members">
+						<div class="member">
+							<h3>Jasper De Rocker</h3>
+							<p>
+								<a href="https://twitter.com/JazprDeRocker"><i class="fa fa-twitter fa-2x"></i></a>
+								<a href="https://www.linkedin.com/in/jasper-de-rocker-80534958"><i class="fa fa-linkedin fa-2x"></i></a>
+							</p>
+						</div>
+						<div class="member">
+							<h3>Thibaut Vincent</h3>
+							<p>
+								<a href="https://twitter.com/thibautvin"><i class="fa fa-twitter fa-2x"></i></a>
+								<a href="https://www.linkedin.com/in/vincentthibaut"><i class="fa fa-linkedin fa-2x"></i></a>
+							</p>
+						</div>
+						<div class="member">
+							<h3>Sander Van Damme</h3>
+							<p>
+								<a href="https://twitter.com/Angry_Moustache"><i class="fa fa-twitter fa-2x"></i></a>
+							</p>
+							<div class="member">
+						</div>
+							<h3>Huseyin Eryoruk</h3>
+							<p>
+								<a href="https://twitter.com/Huuusey"><i class="fa fa-twitter fa-2x"></i></a>
+								<a href="https://www.linkedin.com/in/huseyin-eryoruk-490732107"><i class="fa fa-linkedin fa-2x"></i></a>
+							</p>
+						</div>
+						<div class="member">
+							<h3>Hanna Walgrave</h3>
+							<p>
+								<a href="https://twitter.com/dloppyfildo"><i class="fa fa-twitter fa-2x"></i></a>
+								<a href="https://www.linkedin.com/in/hanna-walgrave-964a4a116"><i class="fa fa-linkedin fa-2x"></i></a>
+							</p>
+						</div>
+						<div class="member">
+							<h3><a href="https://twitter.com/_La_Batte">Christophe Leroy</a></h3>
+							<p>
+								<a href="https://twitter.com/_La_Batte"><i class="fa fa-twitter fa-2x"></i></a>
+								<a href="https://www.linkedin.com/in/christophe-leroy-938b42100"><i class="fa fa-linkedin fa-2x"></i></a>
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+    	</section>
     	<section id="contact">
     		<h2>Contact</h2>
     		<p class="center-p">
