Correction on the Team section

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 							</p>
 						</div>
 						<div class="member">
-							<h3><a href="https://twitter.com/_La_Batte">Christophe Leroy</a></h3>
+							<h3>Christophe Leroy</h3>
 							<p>
 								<a href="https://twitter.com/_La_Batte"><i class="fa fa-twitter fa-2x"></i></a>
 								<a href="https://www.linkedin.com/in/christophe-leroy-938b42100"><i class="fa fa-linkedin fa-2x"></i></a>
