--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<i class="fa fa-paint-brush fa-3x" aria-hidden="true"></i>
 					<div class="members">
 						<div class="member">
-							<h3>Niels Dewelde</h3>
+							<h3>Niels<br>Dewelde</h3>
 							<p>
 								<a href="https://twitter.com/NielsDewelde"><i class="fa fa-twitter fa-2x"></i></a>
 								<a href="https://www.linkedin.com/in/nielsdewelde"><i class="fa fa-linkedin fa-2x"></i></a>
@@ -83,7 +83,7 @@
 					<i class="fa fa-comments fa-3x" aria-hidden="true"></i>
 					<div class="members">
 						<div class="member">
-							<h3>Eveline Vlassenroot</h3>
+							<h3>Eveline<br>Vlassenroot</h3>
 							<p>
 								<a href="https://twitter.com/EvelineVlas"><i class="fa fa-twitter fa-2x"></i></a>
 								<a href="https://www.linkedin.com/in/eveline-vlassenroot-516116a6"><i class="fa fa-linkedin fa-2x"></i></a>
@@ -95,7 +95,7 @@
 					<i class="fa fa-camera fa-3x" aria-hidden="true"></i>
 					<div class="members">
 						<div class="member">
-							<h3>Bruce Vansteenwinkel</h3>
+							<h3>Bruce<br>Vansteenwinkel</h3>
 							<p>
 								<a href="https://twitter.com/bruce_vid"><i class="fa fa-twitter fa-2x"></i></a>
 								<a href="https://www.linkedin.com/in/bruce-vansteenwinkel-51ba0b61"><i class="fa fa-linkedin fa-2x"></i></a>
@@ -107,41 +107,42 @@
 					<i class="fa fa-code fa-3x" aria-hidden="true"></i>
 					<div class="members">
 						<div class="member">
-							<h3>Jasper De Rocker</h3>
+							<h3>Jasper<br>De Rocker</h3>
 							<p>
 								<a href="https://twitter.com/JazprDeRocker"><i class="fa fa-twitter fa-2x"></i></a>
 								<a href="https://www.linkedin.com/in/jasper-de-rocker-80534958"><i class="fa fa-linkedin fa-2x"></i></a>
 							</p>
 						</div>
 						<div class="member">
-							<h3>Thibaut Vincent</h3>
+							<h3>Thibaut<br>Vincent</h3>
 							<p>
 								<a href="https://twitter.com/thibautvin"><i class="fa fa-twitter fa-2x"></i></a>
 								<a href="https://www.linkedin.com/in/vincentthibaut"><i class="fa fa-linkedin fa-2x"></i></a>
 							</p>
 						</div>
 						<div class="member">
-							<h3>Sander Van Damme</h3>
+							<h3>Sander<br>Van Damme</h3>
 							<p>
 								<a href="https://twitter.com/Angry_Moustache"><i class="fa fa-twitter fa-2x"></i></a>
+								<a href="https://www.linkedin.com/in/sander-van-damme-82228b69b"><i class="fa fa-linkedin fa-2x"></i></a>
 							</p>
 						</div>
 						<div class="member">
-							<h3>Huseyin Eryoruk</h3>
+							<h3>Huseyin<br>Eryoruk</h3>
 							<p>
 								<a href="https://twitter.com/Huuusey"><i class="fa fa-twitter fa-2x"></i></a>
 								<a href="https://www.linkedin.com/in/huseyin-eryoruk-490732107"><i class="fa fa-linkedin fa-2x"></i></a>
 							</p>
 						</div>
 						<div class="member">
-							<h3>Hanna Walgrave</h3>
+							<h3>Hanna<br>Walgrave</h3>
 							<p>
 								<a href="https://twitter.com/dloppyfildo"><i class="fa fa-twitter fa-2x"></i></a>
 								<a href="https://www.linkedin.com/in/hanna-walgrave-964a4a116"><i class="fa fa-linkedin fa-2x"></i></a>
 							</p>
 						</div>
 						<div class="member">
-							<h3>Christophe Leroy</h3>
+							<h3>Christophe<br>Leroy</h3>
 							<p>
 								<a href="https://twitter.com/_La_Batte"><i class="fa fa-twitter fa-2x"></i></a>
 								<a href="https://www.linkedin.com/in/christophe-leroy-938b42100"><i class="fa fa-linkedin fa-2x"></i></a>
