--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script src="https://use.fontawesome.com/415c4aae00.js"></script>
   <link rel="stylesheet" href="/build/css/style.css">
 
-  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+  <link rel="stylesheet" href="https://npmcdn.com/leaflet@0.7.7/dist/leaflet.css" />
   <script src="/build/jquery.min.js"></script>
 
 </head>
